apps/monitoring/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - prometheus.j1-lab.xyz
        - grafana.j1-lab.xyz
        - thanos.j1-lab.xyz
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  hosts:
    - prometheus.j1-lab.xyz
  gateways:
    - monitoring-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-operated.monitoring.svc.cluster.local
            port:
              number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
    - grafana.j1-lab.xyz
  gateways:
    - monitoring-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: thanos-vs
  namespace: monitoring
spec:
  hosts:
    - thanos.j1-lab.xyz
  gateways:
    - monitoring-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: thanos-query.monitoring.svc.cluster.local
            port:
              number: 9090
